--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 			<a-asset-item id="" src="model.obj"></a-asset-item>
 			<a-asset-item id="" src="model.mtl"></a-asset-item>
 		</a-assets>
-
+<a-marker-camera preset='hiro'></a-marker-camera>
 
 			</a-scene>
 </body>
