--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <body style='margin : 0px; overflow: hidden;'>
 	<a-scene embedded arjs='trackingMethod: best;'>
 		<a-assets>
-			<a-asset-item id="" src="model.obj"></a-asset-item>
-			<a-asset-item id="" src="model.mtl"></a-asset-item>
+			<a-asset-item id="me-obj" src="model.obj"></a-asset-item>
+			<a-asset-item id="me-mtl" src="model.mtl"></a-asset-item>
 		</a-assets>
+		 <a-entity obj-model="obj: #me-obj; mtl: #me-mtl" position="0 0 -6" scale="0.15 0.15 0.15"> </a-entity>
 <a-marker-camera preset='hiro'></a-marker-camera>
 
 			</a-scene>
