--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 			<a-asset-item id="me-obj" src="model.obj"></a-asset-item>
 			<a-asset-item id="me-mtl" src="model.mtl"></a-asset-item>
 		</a-assets>
-		 <a-entity obj-model="obj: #me-obj; mtl: #me-mtl" position="0 0 -6" scale="0.15 0.15 0.15"> </a-entity>
+		 <a-entity obj-model="obj: url(me.obj); mtl: url(me.mtl);" position="0.5 -2 -0.5" scale="0.10 0.10 0.10"> </a-entity>
 <a-marker-camera preset='hiro'></a-marker-camera>
 
 			</a-scene>
