--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <script src="aframe-ar.js"></script>
 <body style='margin : 0px; overflow: hidden;'>
 	<a-scene embedded arjs='trackingMethod: best;'>
-		<a-assets>
-			<a-asset-item id="me-obj" src="model.obj"></a-asset-item>
-			<a-asset-item id="me-mtl" src="model.mtl"></a-asset-item>
-		</a-assets>
+		//<a-assets>
+			//<a-asset-item id="me-obj" src="model.obj"></a-asset-item>
+			//<a-asset-item id="me-mtl" src="model.mtl"></a-asset-item>
+		//</a-assets>
 		 <a-entity obj-model="obj: url(me.obj); mtl: url(me.mtl);" position="0.5 -2 -0.5" scale="0.10 0.10 0.10"> </a-entity>
 <a-marker-camera preset='hiro'></a-marker-camera>
 
